[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/styles/panel_stats_bar.stylebox" type="StyleBox" id=1]
[ext_resource path="res://assets/fonts/consolas_20.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/gui/controls/stats_bar.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/menu/next_turn.svg" type="Texture" id=4]
[ext_resource path="res://assets/shortkeys/ctrl_t.tres" type="ShortCut" id=5]
[ext_resource path="res://scenes/gui/controls/commodity_stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/icons/commodities/money.svg" type="Texture" id=9]

[node name="StatsBar" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 32.0
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 3.0
margin_right = 1276.0
margin_bottom = 35.0
alignment = 1

[node name="PlanetLabel" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Earth"

[node name="Dummy5" type="Control" parent="HBoxContainer"]
margin_left = 59.0
margin_right = 71.0
margin_bottom = 32.0
rect_min_size = Vector2( 12, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" parent="HBoxContainer" instance=ExtResource( 6 )]
margin_left = 75.0
margin_right = 161.0

[node name="Dummy" type="Control" parent="HBoxContainer"]
margin_left = 165.0
margin_right = 177.0
margin_bottom = 32.0
rect_min_size = Vector2( 12, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resources" parent="HBoxContainer" instance=ExtResource( 6 )]
margin_left = 181.0
margin_right = 267.0
commodity = "Resources"

[node name="Dummy3" type="Control" parent="HBoxContainer"]
margin_left = 271.0
margin_right = 283.0
margin_bottom = 32.0
rect_min_size = Vector2( 12, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Products" parent="HBoxContainer" instance=ExtResource( 6 )]
margin_left = 287.0
margin_right = 373.0
commodity = "Products"

[node name="Dummy4" type="Control" parent="HBoxContainer"]
margin_left = 377.0
margin_right = 389.0
margin_bottom = 32.0
rect_min_size = Vector2( 12, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Electricity" parent="HBoxContainer" instance=ExtResource( 6 )]
margin_left = 393.0
margin_right = 479.0
commodity = "Electricity"

[node name="Dummy2" type="Control" parent="HBoxContainer"]
margin_left = 483.0
margin_right = 507.0
margin_bottom = 32.0
rect_min_size = Vector2( 24, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer"]
margin_left = 511.0
margin_top = 4.0
margin_right = 535.0
margin_bottom = 28.0
size_flags_vertical = 4
texture = ExtResource( 9 )

[node name="NetLabel" type="Label" parent="HBoxContainer"]
margin_left = 539.0
margin_top = 5.0
margin_right = 594.0
margin_bottom = 26.0
hint_tooltip = "Resulting income"
mouse_filter = 0
custom_fonts/font = ExtResource( 2 )
text = "+1000"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 598.0
margin_right = 642.0
margin_bottom = 32.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 44.0
margin_bottom = 16.0

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "+"
align = 2
valign = 1

[node name="TaxesLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 44.0
margin_bottom = 16.0
hint_tooltip = "Tax income"
mouse_filter = 0
text = "1000"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 44.0
margin_bottom = 32.0

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 8.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "-"
align = 2
valign = 1

[node name="MaintenanceLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 12.0
margin_right = 44.0
margin_bottom = 16.0
hint_tooltip = "Maintenance"
mouse_filter = 0
text = "1000"
valign = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 646.0
margin_right = 650.0
margin_bottom = 32.0

[node name="BudgetLabel" type="Label" parent="HBoxContainer"]
margin_left = 654.0
margin_top = 5.0
margin_right = 698.0
margin_bottom = 26.0
hint_tooltip = "Current budget"
mouse_filter = 0
custom_fonts/font = ExtResource( 2 )
text = "1000"
valign = 1

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 702.0
margin_right = 1188.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Label5" type="Label" parent="HBoxContainer"]
margin_left = 1192.0
margin_top = 8.0
margin_right = 1224.0
margin_bottom = 24.0
text = "Turn"
valign = 1

[node name="TurnLabel" type="Label" parent="HBoxContainer"]
margin_left = 1228.0
margin_top = 8.0
margin_right = 1236.0
margin_bottom = 24.0
hint_tooltip = "Game turn"
mouse_filter = 0
text = "0"
valign = 1

[node name="NextTurnButton" type="Button" parent="HBoxContainer"]
margin_left = 1240.0
margin_right = 1272.0
margin_bottom = 32.0
hint_tooltip = "End turn"
size_flags_horizontal = 0
size_flags_vertical = 4
shortcut = ExtResource( 5 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/NextTurnButton" to="." method="_on_NextTurnButton_pressed"]
